--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Concessionaria/Cadastrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Concessionaria/Cadastrar.cshtml
@@ -101,6 +101,10 @@
         $('#CEP').mask('00000-000');
 
         $('#Form').submit(function (e) {
+            if (!$("#Form").valid()) {
+                return false
+            }
+
             param = {
                 'Nome': $('#Nome').val(),
                 'CEP': $('#CEP').val(),
@@ -183,23 +187,6 @@
         
         })
     });
-
-    // function applyMask(input) {
-    //     const value = input.value.replace(/\D/g, ''); // Remove caracteres não numéricos
-    //     if (value.length <= 10) {
-    //         input.value = value
-    //             .replace(/(\d{2})(\d{0,4})/, '($1) $2')
-    //             .replace(/(\d{4})(\d{0,4})/, '$1-$2');
-    //     } else {
-    //         input.value = value
-    //             .replace(/(\d{2})(\d{5})(\d{0,4})/, '($1) $2-$3');
-    //     }
-    // }
-
-    // // Associa a função ao evento input
-    // document.getElementById('Telefone').addEventListener('input', function () {
-    //     applyMask(this);
-    // });
 
     function updateValidationSummary(message) {
         $('.summary-custom').empty();
