--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
@@ -8,30 +8,36 @@
         <div class="card shadow-sm">
             <div class="card-body">
                 <h4 class="text-center mb-4">Registro de Usuário</h4>
+                @if (ViewBag.Error is not null)
+                {
+                    <div class="col-12 mb-2">
+                        <span class="text-danger">@ViewBag.Error</span>
+                    </div>
+                }
                 <form asp-action="Registrar" method="post">
                     <div class="mb-1">
                         <label asp-for="Nome" class="form-label">Nome</label>
-                        <input asp-for="Nome" class="form-control" placeholder="Digite seu nome" />
+                        <input asp-for="Nome" class="form-control" placeholder="Digite seu nome" value="@Model.Nome" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Sobrenome" class="form-label">Sobrenome</label>
-                        <input asp-for="Sobrenome" class="form-control" placeholder="Digite seu sobrenome" />
+                        <input asp-for="Sobrenome" class="form-control" placeholder="Digite seu sobrenome" value="@Model.Sobrenome" />
                         <span asp-validation-for="Sobrenome" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Email" class="form-label">Email</label>
-                        <input asp-for="Email" class="form-control" placeholder="Digite seu email" />
+                        <input asp-for="Email" class="form-control" placeholder="Digite seu email" value="@Model.Email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Senha" class="form-label">Senha</label>
-                        <input asp-for="Senha" type="password" class="form-control" placeholder="Digite sua senha" />
+                        <input asp-for="Senha" type="password" class="form-control" placeholder="Digite sua senha" value="@Model.Senha" />
                         <span asp-validation-for="Senha" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="SenhaConfirmacao" class="form-label">Confirmar Senha</label>
-                        <input asp-for="SenhaConfirmacao" type="password" class="form-control" placeholder="Confirme sua senha" />
+                        <input asp-for="SenhaConfirmacao" type="password" class="form-control" placeholder="Confirme sua senha" value="@Model.SenhaConfirmacao" />
                         <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
                     </div>
                     <div class="d-grid">
