--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Sidebar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Sidebar.cshtml
@@ -22,7 +22,7 @@
                 </span>
             </a>
             <div class="collapse" id="fabricantesSubMenu">
-                <ul class="list-unstyled">
+                <ul class="list-unstyled mb-0">
                     <li>
                         <a class="dropdown-item dropdowColapseCustom" asp-controller="Fabricante" asp-action="Cadastrar" title="Adicionar Fabricante" data-page="CriarFabricante">
                             <i class="fa-solid fa-plus icon-col-sidebar iconDropdown"></i>
@@ -46,7 +46,7 @@
                 </span>
             </a>
             <div class="collapse" id="veiculosSubMenu">
-                <ul class="list-unstyled">
+                <ul class="list-unstyled mb-0">
                     <li>
                         <a class="dropdown-item dropdowColapseCustom" asp-controller="Veiculo" asp-action="Cadastrar" title="Cadastrar veículo" data-page="CadastarVeiculo">
                             <i class="fa-solid fa-plus icon-col-sidebar iconDropdown"></i>
@@ -64,7 +64,7 @@
                 </span>
             </a>
             <div class="collapse" id="concessionariaSubMenu">
-                <ul class="list-unstyled">
+                <ul class="list-unstyled mb-0">
                     <li>
                         <a class="dropdown-item dropdowColapseCustom" asp-controller="Concessionaria" asp-action="Cadastrar" title="Cadastrar Concessionárias" data-page="CadastarConcessionaria">
                             <i class="fa-solid fa-plus icon-col-sidebar iconDropdown"></i>
@@ -75,14 +75,14 @@
             </div>
         </authorize-role>
         <authorize-role roles="Administrador, Gerente, Vendedor">
-            <a class="col-sidebar" data-bs-toggle="collapse" href="#vendaSubMenu" role="button" aria-expanded="false" aria-controls="vendaSubMenu" title="Vendas" data-page="Venda">
+            <a class="col-sidebar" data-bs-toggle="collapse" href="#vendaSubMenu" role="button" aria-expanded="false" aria-controls="vendaSubMenu" title="Vendas" data-page="Registrar">
                 <span class="span-col-sidebar">
                     <i class="fa-solid fa-money-check-dollar icon-col-sidebar"></i>
                     <span class="desc-col-sidebar">Vendas</span>
                 </span>
             </a>
             <div class="collapse" id="vendaSubMenu">
-                <ul class="list-unstyled">
+                <ul class="list-unstyled mb-0">
                     <li>
                         <a class="dropdown-item dropdowColapseCustom" asp-controller="Venda" asp-action="Registrar" title="Registrar Venda" data-page="Registrar">
                             <i class="fa-solid fa-plus icon-col-sidebar iconDropdown"></i>
