--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/wwwroot/css/custom-style.css
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/wwwroot/css/custom-style.css
@@ -25,3 +25,8 @@
     .validation-summary-errors li {
         list-style: none;
     }
+
+.btn-color-custom {
+    background-color: chocolate !important;
+    color: white;
+}
